# codesearch-backend

./: .gitignore  .tree.config  15.txt  README.md  README.txt  add_use_cache.py  aider_chunks.txt  chunk_file.py  chunks.json  chunks.txt  cluster_agg.ipynb  create_postgres_db.sh  dir_tree.py  dspy.ipynb  flow.ipynb  full_code.json  install.py  joke.py  llm.py  llm_config.yaml  main.py  modify_sqlite.py  mypy.ini  output.txt  profile.out  pyproject.toml  pyrightconfig.json  run_mypy.sh  scan.py  structured_output1.json  structured_output2.json  structured_output3.json  test.ipynb  test.json  test.py  test_c_eval.py  test_claude.py  test_cluster.py  test_eval.py  test_gh.py  (+23 more)
alembic/versions/: 1b7808984909_added_time_taken_field_to_repo.py
llm/: __init__.py  cache.yaml  config.yaml  llm.py  test_cache.py
llm/cache/: cluster.yaml  vanilla.yaml  walkthrough.yaml
llm/types/: clustering.py  types.py
moatless/: repository.py  settings.py  types.py
moatless/index/: cluster_node.py  code_index.py  epic_split.py
new_rtfs/: __init__.py
new_rtfs/captures/: __init__.py  build.py  imports.py
new_rtfs/language/: python.py
new_rtfs/scope_graph/: __init__.py  graph.py
notebooks/: llm_summarize.py  new_clustering.ipynb
rtfs/: cli.py  graph.py  utils.py
rtfs/aider_graph/: aider_graph.py  graph.py
rtfs/chunk_resolution/: chunk_graph.py  graph.py
rtfs/cluster/: cluster_graph.py  graph.py  infomap.py  lmp.py  path.py
rtfs/scope_resolution/: imports.py
rtfs_rewrite/: ts.py
src/: config.py  exceptions.py  llm_config.yaml  logger.py  models.py  settings.py  utils.py
(+146 files in other folders)
